# c_ipher

./: .gitignore  CMakeLists.txt  README.md  TODO
def/: atbash
inc/: cipher_util.h  ciphers.h  validate.h
src/: c_ipher.c  cipher_run.c  cipher_test.c  cipher_util.c  ciphers.c  validate.c
test/: a1z26_decrypt.txt  a1z26_encrypt.txt  affine_decrypt.txt  affine_encrypt.txt  atbash_decrypt.txt  atbash_encrypt.txt  atbash_old.txt  baconian_decrypt.txt  baconian_encrypt.txt  caesar_decrypt.txt  caesar_encrypt.txt  vigenere_decrypt.txt  vigenere_encrypt.txt
